Fix for no gifts in dark mode.

--- a/src/scss/_list.scss
+++ b/src/scss/_list.scss
@@ -125,6 +125,7 @@
   }
 
   &__no-gifts {
+    color: $foreground;
     padding: 12px 0;
     padding-left: 8px;
   }
